# Server

./: .env  .gitignore  CMakeLists.txt  vcpkg.json
include/: PasswordHasher.hpp  env.h  mail.h  password.h
include/database/: AccountRepository.hpp  database.hpp
src/: generate_proto.sh  mail.cpp  main.cpp  packet.pb.cc  packet.proto  password.cpp
src/database/: AccountRepository.cpp  database.cpp
